// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PieChart ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-grid-xs-12 MuiGrid-spacing-xs-2 css-106ovip-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row css-1xt10pe-MuiGrid-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-grid-xs-12 MuiGrid-spacing-xs-2 css-106ovip-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row css-1xt10pe-MuiGrid-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-grid-xs-12 MuiGrid-spacing-xs-2 css-hlhsal-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row css-1y5yvh-MuiGrid-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart ENCOURAGE_E4E theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-grid-xs-12 MuiGrid-spacing-xs-2 css-hlhsal-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row css-1y5yvh-MuiGrid-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart with title ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-grid-xs-12 MuiGrid-spacing-xs-2 css-106ovip-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row css-1wyfkv8-MuiGrid-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1nszx3p-MuiTypography-root-DlsPieChart-titleText"
        style="--Typography-textAlign: center;"
        title="Test Title"
      >
        Test Title
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row css-1xt10pe-MuiGrid-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart with title ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-grid-xs-12 MuiGrid-spacing-xs-2 css-106ovip-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row css-1wyfkv8-MuiGrid-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-1nszx3p-MuiTypography-root-DlsPieChart-titleText"
        style="--Typography-textAlign: center;"
        title="Test Title"
      >
        Test Title
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row css-1xt10pe-MuiGrid-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart with title ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-grid-xs-12 MuiGrid-spacing-xs-2 css-hlhsal-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row css-eilmjh-MuiGrid-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-bhhf35-MuiTypography-root-DlsPieChart-titleText"
        style="--Typography-textAlign: center;"
        title="Test Title"
      >
        Test Title
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row css-1y5yvh-MuiGrid-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;

exports[`PieChart with title ENCOURAGE_E4E theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-grid-xs-12 MuiGrid-spacing-xs-2 css-hlhsal-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row css-eilmjh-MuiGrid-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter css-xuterm-MuiTypography-root-DlsPieChart-titleText"
        style="--Typography-textAlign: center;"
        title="Test Title"
      >
        Test Title
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row css-1y5yvh-MuiGrid-root"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 350px; min-width: 0;"
      />
    </div>
  </div>
</div>
`;
